Improving unit tests.